Added TapCapToken
