# apps/tapcap-supplier/Server/Server/TapCapSupplier.Server/Models/TapCapToken.cs
@@ -1,0 +1,163 @@
+/*
+ * THE TapCap supply
+ *
+ * The interace for TapCap between buyers & sellers.
+ *
+ * OpenAPI spec version: 0.1.0
+ * Contact: stephen.taylor.dev@gmail.com
+ * Generated by: https://openapi-generator.tech
+ */
+
+using System;
+using System.Linq;
+using System.Text;
+using System.Collections.Generic;
+using System.ComponentModel.DataAnnotations;
+using System.Runtime.Serialization;
+using Newtonsoft.Json;
+
+namespace TapCapSupplier.Server.Models
+{ 
+    /// <summary>
+    /// 
+    /// </summary>
+    [DataContract]
+    public partial class TapCapToken : IEquatable<TapCapToken>
+    { 
+        /// <summary>
+        /// Gets or Sets ClientAccount
+        /// </summary>
+        [Required]
+        [DataMember(Name="clientAccount")]
+        public string ClientAccount { get; set; }
+
+        /// <summary>
+        /// Gets or Sets AvailableBalance
+        /// </summary>
+        [Required]
+        [DataMember(Name="availableBalance")]
+        public double? AvailableBalance { get; set; }
+
+        /// <summary>
+        /// Gets or Sets TransactionId
+        /// </summary>
+        [Required]
+        [DataMember(Name="transactionId")]
+        public decimal? TransactionId { get; set; }
+
+        /// <summary>
+        /// Gets or Sets Timestamp
+        /// </summary>
+        [Required]
+        [DataMember(Name="timestamp")]
+        public double? Timestamp { get; set; }
+
+        /// <summary>
+        /// Returns the string presentation of the object
+        /// </summary>
+        /// <returns>String presentation of the object</returns>
+        public override string ToString()
+        {
+            var sb = new StringBuilder();
+            sb.Append("class TapCapToken {\n");
+            sb.Append("  ClientAccount: ").Append(ClientAccount).Append("\n");
+            sb.Append("  AvailableBalance: ").Append(AvailableBalance).Append("\n");
+            sb.Append("  TransactionId: ").Append(TransactionId).Append("\n");
+            sb.Append("  Timestamp: ").Append(Timestamp).Append("\n");
+            sb.Append("}\n");
+            return sb.ToString();
+        }
+
+        /// <summary>
+        /// Returns the JSON string presentation of the object
+        /// </summary>
+        /// <returns>JSON string presentation of the object</returns>
+        public string ToJson()
+        {
+            return JsonConvert.SerializeObject(this, Formatting.Indented);
+        }
+
+        /// <summary>
+        /// Returns true if objects are equal
+        /// </summary>
+        /// <param name="obj">Object to be compared</param>
+        /// <returns>Boolean</returns>
+        public override bool Equals(object obj)
+        {
+            if (obj is null) return false;
+            if (ReferenceEquals(this, obj)) return true;
+            return obj.GetType() == GetType() && Equals((TapCapToken)obj);
+        }
+
+        /// <summary>
+        /// Returns true if TapCapToken instances are equal
+        /// </summary>
+        /// <param name="other">Instance of TapCapToken to be compared</param>
+        /// <returns>Boolean</returns>
+        public bool Equals(TapCapToken other)
+        {
+            if (other is null) return false;
+            if (ReferenceEquals(this, other)) return true;
+
+            return 
+                (
+                    ClientAccount == other.ClientAccount ||
+                    ClientAccount != null &&
+                    ClientAccount.Equals(other.ClientAccount)
+                ) && 
+                (
+                    AvailableBalance == other.AvailableBalance ||
+                    AvailableBalance != null &&
+                    AvailableBalance.Equals(other.AvailableBalance)
+                ) && 
+                (
+                    TransactionId == other.TransactionId ||
+                    TransactionId != null &&
+                    TransactionId.Equals(other.TransactionId)
+                ) && 
+                (
+                    Timestamp == other.Timestamp ||
+                    Timestamp != null &&
+                    Timestamp.Equals(other.Timestamp)
+                );
+        }
+
+        /// <summary>
+        /// Gets the hash code
+        /// </summary>
+        /// <returns>Hash code</returns>
+        public override int GetHashCode()
+        {
+            unchecked // Overflow is fine, just wrap
+            {
+                var hashCode = 41;
+                // Suitable nullity checks etc, of course :)
+                    if (ClientAccount != null)
+                    hashCode = hashCode * 59 + ClientAccount.GetHashCode();
+                    if (AvailableBalance != null)
+                    hashCode = hashCode * 59 + AvailableBalance.GetHashCode();
+                    if (TransactionId != null)
+                    hashCode = hashCode * 59 + TransactionId.GetHashCode();
+                    if (Timestamp != null)
+                    hashCode = hashCode * 59 + Timestamp.GetHashCode();
+                return hashCode;
+            }
+        }
+
+        #region Operators
+        #pragma warning disable 1591
+
+        public static bool operator ==(TapCapToken left, TapCapToken right)
+        {
+            return Equals(left, right);
+        }
+
+        public static bool operator !=(TapCapToken left, TapCapToken right)
+        {
+            return !Equals(left, right);
+        }
+
+        #pragma warning restore 1591
+        #endregion Operators
+    }
+}
