# apps/tapcap-supplier/Server/Server/TapCapSupplier.Server/wwwroot/openapi-original.json
@@ -136,6 +136,26 @@
           }
         }
       },
+      "TapCapToken" : {
+        "required" : [ "availableBalance", "clientAccount", "timestamp", "transactionId" ],
+        "type" : "object",
+        "properties" : {
+          "clientAccount" : {
+            "type" : "string"
+          },
+          "availableBalance" : {
+            "type" : "number",
+            "format" : "int64"
+          },
+          "transactionId" : {
+            "type" : "number"
+          },
+          "timestamp" : {
+            "type" : "number",
+            "format" : "int64"
+          }
+        }
+      },
       "SignedMessage" : {
         "required" : [ "message", "signature" ],
         "type" : "object",
